# Gravity

./: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
src/: grid.cpp  grid.h  main.cpp  shader.frag  shader.vert  sphere.cpp  sphere.h
